--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import "https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css";
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +7,45 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: rgb(238, 240, 239);
+  width: 100vw;
+  height: 100vh;
+  padding-top: 20vh;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@media ( max-width: 900px ) {
+  body {
+    background-color: rgb(238, 240, 239);
+    padding-right: 500px;
+    height: 1080px;
+    font-size: x-large ;
+  }
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-left: 32%;
+}
+
+.first {
+  display: flex;
+  justify-content: center;
+  width: 500px;
+}
+
+strong {
+  color: rgb(88, 90, 90);
+}
+
+.button {
+  margin-left: 5px;
+}
+
+.second {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 500px;
 }
